# gold-advisor-vietnam

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
scripts/: backfill_historical.py
src/: config.py
src/advisor/: __init__.py  agent.py  models.py  tools.py
src/alerts/: bot.py  dispatcher.py
src/analysis/: connection.py  gap.py  macro.py  prices.py
src/api/: main.py
src/engine/: composite.py  fx_signal.py  gap_signal.py  gold_trend_signal.py  llm_reasoning.py  modes.py  (+10 more)
templates/: base.html  dashboard.html  polymarket.html  report.html
tests/: test_alert_pipeline.py  test_backfill.py  test_bot.py  test_composite.py  test_composite_override.py  test_dashboard_api.py  test_dashboard_html.py  test_dashboard_template.py  test_dispatcher.py  test_dxy_fetcher.py  test_fedwatch_polymarket.py  test_fetchers.py  test_fx_signal.py  test_gap.py  test_gap_api.py  test_gap_signal.py  test_gold_trend_signal.py  test_health.py  test_macro_analysis.py  test_macro_api.py  test_macro_template.py  test_modes.py  test_news_admin.py  test_news_api.py  test_news_fetcher.py  test_news_models.py  test_news_parser.py  test_news_repository.py  test_news_scheduler.py  test_news_template.py  test_pipeline.py  test_pipeline_seasonal_policy.py  test_policy_signal.py  test_polymarket_clob.py  test_price_api.py  test_price_history.py  test_quality.py  test_reasoning.py  test_reasoning_seasonal_policy.py  test_repository.py  (+16 more)
(+128 files in other folders)
